--- a/ANDROID_FOUCRIER_PLAISANT/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID_FOUCRIER_PLAISANT/app/src/main/res/layout/activity_main.xml
@@ -7,7 +7,8 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <TextView android:text="Hello World!" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:id="@+id/textView" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
@@ -26,4 +27,15 @@
         android:id="@+id/button2"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button3"
+        android:layout_above="@+id/button2"
+        android:layout_toRightOf="@+id/textView"
+        android:layout_toEndOf="@+id/textView"
+        android:layout_marginBottom="52dp" />
 </RelativeLayout>
