--- a/ANDROID_FOUCRIER_PLAISANT/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID_FOUCRIER_PLAISANT/app/src/main/res/layout/activity_main.xml
@@ -7,46 +7,45 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
 
     <Button
-        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/paramButton"
-        android:id="@+id/button"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:text="@string/trainButton"
+        android:id="@+id/trainButton"
+        android:layout_below="@+id/mapButton"
+        android:layout_alignRight="@+id/timeButton"
+        android:layout_alignEnd="@+id/timeButton" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/prochainButton"
-        android:id="@+id/button2"
-        android:layout_below="@+id/button"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp" />
-
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/horaireButton"
-        android:id="@+id/button3"
+        android:text="@string/timeButton"
+        android:id="@+id/timeButton"
         android:layout_centerVertical="true"
         android:layout_centerHorizontal="true" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/planButton"
-        android:id="@+id/button4"
-        android:layout_below="@+id/button3"
+        android:text="@string/mapButton"
+        android:id="@+id/mapButton"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="67dp" />
+        android:layout_marginTop="42dp" />
 
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/ligneButton"
-        android:id="@+id/button5"
+        android:text="@string/linesButton"
+        android:id="@+id/linesButton"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true" />
+
+    <Button
+        style="?android:attr/buttonStyleSmall"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="New Button"
+        android:id="@+id/button"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/trainButton"
+        android:layout_toEndOf="@+id/trainButton" />
 </RelativeLayout>
