--- a/ANDROID/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Timetable"
@@ -26,6 +27,7 @@
         android:layout_alignEnd="@+id/mapButton" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Map"
@@ -34,6 +36,7 @@
         android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lines"
