--- a/ANDROID/app/src/main/res/layout/activity_main_fr.xml
+++ b/ANDROID/app/src/main/res/layout/activity_main_fr.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentEnd="true" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Horaires"
@@ -26,14 +27,15 @@
         android:layout_alignEnd="@+id/mapButton" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Plan"
         android:id="@+id/mapButton"
-        android:layout_centerHorizontal="true"
-        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material" />
+        android:layout_centerHorizontal="true" />
 
     <Button
+        style="?android:attr/buttonStyleSmall"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Lignes"
