--- a/ANDROID/app/src/main/res/layout/activity_main.xml
+++ b/ANDROID/app/src/main/res/layout/activity_main.xml
@@ -8,52 +8,82 @@
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="80dp"
+        android:layout_height="40dp"
         android:text="Settings"
         android:id="@+id/settingsButton"
         android:layout_alignParentTop="true"
         android:layout_alignParentRight="true"
-        android:layout_alignParentEnd="true" />
+        android:layout_alignParentEnd="true"
+        android:background="#cbd8fc"
+        android:elegantTextHeight="false"
+        android:shadowColor="#0f1830"
+        android:textColor="#04060e"
+        android:textAppearance="@color/accent_material_dark"
+        android:singleLine="false"
+        android:textSize="10dp" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
         android:text="Timetable"
-        android:id="@+id/Timetable"
-        android:layout_centerVertical="true"
-        android:layout_alignRight="@+id/mapButton"
-        android:layout_alignEnd="@+id/mapButton" />
+        android:id="@+id/timeButton"
+        android:layout_marginTop="145dp"
+        android:layout_centerHorizontal="true"
+        android:background="#cbd8fc"
+        android:elegantTextHeight="false"
+        android:shadowColor="#0f1830"
+        android:textColor="#04060e"
+        android:textAppearance="@color/accent_material_dark"
+        android:singleLine="false"
+        android:textSize="@dimen/abc_dialog_padding_material" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
         android:text="Map"
         android:id="@+id/mapButton"
+        android:textSize="@dimen/abc_dialog_padding_material"
+        android:layout_marginTop="225dp"
         android:layout_centerHorizontal="true"
-        android:textSize="@dimen/abc_action_bar_icon_vertical_padding_material" />
+        android:background="#cbd8fc"
+        android:elegantTextHeight="false"
+        android:shadowColor="#0f1830"
+        android:textColor="#04060e"
+        android:textAppearance="@color/accent_material_dark"
+        android:singleLine="false" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
         android:text="Lines"
         android:id="@+id/linesButton"
-        android:layout_marginBottom="81dp"
-        android:layout_alignParentBottom="true"
-        android:layout_alignRight="@+id/Timetable"
-        android:layout_alignEnd="@+id/Timetable" />
+        android:layout_marginTop="305dp"
+        android:layout_centerHorizontal="true"
+        android:background="#cbd8fc"
+        android:elegantTextHeight="false"
+        android:shadowColor="#0f1830"
+        android:textColor="#04060e"
+        android:textAppearance="@color/accent_material_dark"
+        android:singleLine="false"
+        android:textSize="@dimen/abc_dialog_padding_material" />
 
     <Button
         style="?android:attr/buttonStyleSmall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="70dp"
         android:text="Next train"
         android:id="@+id/trainButton"
-        android:layout_below="@+id/mapButton"
-        android:layout_alignLeft="@+id/mapButton"
-        android:layout_alignStart="@+id/mapButton"
-        android:layout_marginTop="53dp" />
+        android:layout_marginTop="65dp"
+        android:layout_centerHorizontal="true"
+        android:background="#cbd8fc"
+        android:elegantTextHeight="false"
+        android:shadowColor="#0f1830"
+        android:textColor="#04060e"
+        android:textAppearance="@color/accent_material_dark"
+        android:singleLine="false"
+        android:textSize="@dimen/abc_dialog_padding_material" />
 </RelativeLayout>
